@@ -1,3 +1,9 @@
+rev 612 (2024-11-12) (krueschan)
+- make 2035 default display year
+
+rev 611 (2024-10-10) (krueschan)
+- add link to newsletter signup
+
 rev 610 (2024-03-27) (krueschan)
 - minor changes to country report layout
 
